--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "unordered_map": "cpp",
         "variant": "cpp",
         "algorithm": "cpp",
-        "__verbose_abort": "cpp"
+        "__verbose_abort": "cpp",
+        "thread": "cpp"
     }
 }
